--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     
                     <h2>General info</h2>
-                    <p>Date of birth: 14. 01. 1991.<br>
+                    <p>Year of birth: 1991<br>
                     Location: Novi Sad, Serbia
                     </p>
                 </div>
